--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 
 
 <div id="root"></div>
-<script src="/index_bundle.js"></script></body>
+<script src="./index_bundle.js"></script></body>
 </html>
