--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<meta charset="UTF-8">
-  <title>React/Redux Boilerplate</title>
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <title>React/Redux Boilerplate</title>
+  <link href="./style.css" rel="stylesheet"></head>
+  <body>
 
 
-<div id="root"></div>
-<script src="./index_bundle.js"></script></body>
+    <div id="root"></div>
+  <script src="./index_bundle.js"></script></body>
 </html>
