--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
     <title>React/Redux Boilerplate</title>
   <link href="./style.css" rel="stylesheet"></head>
@@ -9,5 +12,5 @@
 
 
     <div id="root"></div>
-  <script src="./index_bundle.js"></script></body>
+  <script type="text/javascript" src="./index_bundle.js"></script></body>
 </html>
