--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
-    <title>React/Redux Boilerplate</title>
+    <title>Code-Step</title>
   </head>
   <body>
 
